--- a/.github/workflows/go-common.yml
+++ b/.github/workflows/go-common.yml
@@ -65,8 +65,8 @@ jobs:
 
       # Used as an indicator of the quality of changes introduced for a package
       # by showing if package coverage has increased or decreased
-      - name: Archive code coverage results
-        if: ${{ !cancelled() }}
+      - name: Upload coverage report
+        if: ${{ !cancelled() }} && github.event.name == 'pull_request'
         uses: actions/upload-artifact@v4
         with:
           name: code-coverage
