--- a/.github/workflows/go-static-analysis.yaml
+++ b/.github/workflows/go-static-analysis.yaml
@@ -52,7 +52,7 @@ jobs:
       - name: golangci-lint
         uses: golangci/golangci-lint-action@v6.5.0
         with:
-          version: latest
+          version: v1.64.4
           skip-cache: true
           args: --config=golangci.yaml
 
