--- a/.github/workflows/go-static-analysis.yaml
+++ b/.github/workflows/go-static-analysis.yaml
@@ -52,9 +52,10 @@ jobs:
       - name: golangci-lint
         uses: golangci/golangci-lint-action@v6.5.0
         with:
-          version: v1.64.4
+          version: latest
           skip-cache: true
           args: --config=golangci.yaml
+          verify: false
 
   # Check yaml for syntax validity, line length, trailing spaces, indentation, etc.
   yaml_lint_scan:
