--- a/.github/workflows/go-common.yml
+++ b/.github/workflows/go-common.yml
@@ -63,16 +63,16 @@ jobs:
         run: |
           echo -e "Coverage results: ${{ steps.test_coverage.outputs.coverage }}"
 
-      # Used as an indicator of the quality of changes introduced for a package
-      # by showing if package coverage has increased or decreased
       - name: Upload coverage report
-        if: ${{ !cancelled() }} && github.event.name == 'pull_request'
+        if: ${{ !cancelled() }}
         uses: actions/upload-artifact@v4
         with:
           name: code-coverage
-          path: coverage.txt
+          path: ${{ steps.test_coverage.outputs.code_coverage_artifact }}
 
-      - name: Code coverage report
+      # Used as an indicator of the quality of changes introduced for a package
+      # by showing if package coverage has increased or decreased
+      - name: Generate coverage report
         # we don't want this check to run on merging to main because it will reset coverage.txt to an empty artifact
         if: ${{ !cancelled() }} && github.event.name == 'pull_request'
         # code coverage profiles are uploaded as GitHub artifacts, which automatically expire after 90 days
