Add trigger job for commit update action

--- a/.github/workflows/go-common.yml
+++ b/.github/workflows/go-common.yml
@@ -71,7 +71,7 @@ jobs:
           path: ${{ steps.test_coverage.outputs.code_coverage_artifact }}
 
       # Used as an indicator of the quality of changes introduced for a package
-      # by showing if package coverage has increased or decreased
+      # by showing if package coverage has increased, decreased, or stayed the same
       - name: Generate coverage report
         # we don't want this check to run on merging to main because it will reset coverage.txt to an empty artifact
         if: ${{ !cancelled() }} && github.event.name == 'pull_request'
