--- a/.github/workflows/trigger-update-libraries-to-commits.yml
+++ b/.github/workflows/trigger-update-libraries-to-commits.yml
@@ -6,7 +6,7 @@
 #
 #  http://www.apache.org/licenses/LICENSE-2.0
 
-# Trigger workflow to update Dell packages to their latest released version
+# Trigger workflow to update Dell packages to their latest commits
 name: Trigger Update Dell Packages to Latest Commits
 
 on:
