--- a/.github/workflows/go-common.yml
+++ b/.github/workflows/go-common.yml
@@ -91,6 +91,11 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      - name: Setup Go
+        uses: actions/setup-go@v5
+        with:
+          go-version: "1.24"
+
       - name: gosec
         uses: dell/common-github-actions/gosec-runner@main
         with:
