--- a/.github/workflows/go-common.yml
+++ b/.github/workflows/go-common.yml
@@ -92,7 +92,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: gosec
-        uses: dell/common-github-actions/gosec-runner@add-setup-go
+        uses: dell/common-github-actions/gosec-runner@main
         with:
           excludes: ${{ env.GOSEC_EXCLUDES }}
           exclude-dir: ${{ env.GOSEC_EXCLUDE_DIR }}
