--- a/.github/workflows/update-libraries.yml
+++ b/.github/workflows/update-libraries.yml
@@ -127,6 +127,7 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
 
     # Needed for pulling the latest commits from main branch once the PR gets merged from the previous step
+    # Required for Trigger Release of Dell Libraries (trigger-auto-csm-release-golibs-workflow.yaml)
     - name: Pull latest changes from main
       run: |
         git pull origin main
