--- a/.github/workflows/check-license-header.yaml
+++ b/.github/workflows/check-license-header.yaml
@@ -12,7 +12,7 @@ jobs:
     - name: Check License Header
       uses: apache/skywalking-eyes/header@main
       with:
-        config: .licenserc.yaml
+        config: ${{ inputs.config-path }}
         mode: check
 
   fix-license-headers:
@@ -23,7 +23,7 @@ jobs:
     - name: Fix License Header
       uses: apache/skywalking-eyes/header@main
       with:
-        config: .licenserc.yaml
+        config: ${{ inputs.config-path }}
         mode: fix
     - name: Commit changes
       uses: EndBug/add-and-commit@v4
