--- a/.github/workflows/check-license-header.yaml
+++ b/.github/workflows/check-license-header.yaml
@@ -2,32 +2,33 @@ name: Check License Header
 
 on:
   workflow_call:
-
+    inputs:
+      config-path: { required: true, type: string }
 jobs:
   check-license-header:
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v2
-    - name: Check License Header
-      uses: apache/skywalking-eyes/header@main
-      with:
-        config: ${{ inputs.config-path }}
-        mode: check
+      - name: Checkout repository
+        uses: actions/checkout@v2
+      - name: Check License Header
+        uses: apache/skywalking-eyes/header@main
+        with:
+          config: ${{ inputs.config-path }}
+          mode: check
 
   fix-license-headers:
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v2
-    - name: Fix License Header
-      uses: apache/skywalking-eyes/header@main
-      with:
-        config: ${{ inputs.config-path }}
-        mode: fix
-    - name: Commit changes
-      uses: EndBug/add-and-commit@v4
-      with:
-        author_name: License Bot
-        author_email: license_bot@github.com
-        message: 'Automatic application of license header'
+      - name: Checkout repository
+        uses: actions/checkout@v2
+      - name: Fix License Header
+        uses: apache/skywalking-eyes/header@main
+        with:
+          config: ${{ inputs.config-path }}
+          mode: fix
+      - name: Commit changes
+        uses: EndBug/add-and-commit@v4
+        with:
+          author_name: License Bot
+          author_email: license_bot@github.com
+          message: "Automatic application of license header"
