updated license file

--- a/.github/configs/.licenserc.yaml
+++ b/.github/configs/.licenserc.yaml
@@ -21,6 +21,7 @@ header:
     - 'go.mod'
     - 'go.sum'
     - '.licenserc.yaml'
+    - 'common-github-actions/**'
   comment: on-failure
   dependency:
     files:
