--- a/.github/workflows/csm-release-driver-module.yaml
+++ b/.github/workflows/csm-release-driver-module.yaml
@@ -64,7 +64,7 @@ jobs:
   release-and-tag:
     name: Tag and Release
     needs: build-and-scan
-    uses: dell/common-github-actions/.github/workflows/release-creator.yaml@bugfix/patch-release
+    uses: dell/common-github-actions/.github/workflows/release-creator.yaml@main
     with:
       version: ${{ inputs.version }}
     secrets: inherit
