updated latest version fetch logic

--- a/.github/workflows/release-creator.yaml
+++ b/.github/workflows/release-creator.yaml
@@ -38,7 +38,7 @@ jobs:
       - name: Get latest release
         if: ${{ inputs.version == 'patch' || inputs.version == 'minor' || inputs.version == 'major' }}
         run: |
-          latest_version=$(git describe --tags $(git rev-list --tags --max-count=1))
+          latest_version=$(curl -s https://api.github.com/repos/${GITHUB_REPOSITORY}/releases/latest | jq -r .tag_name)
           echo "MY_VAR=${latest_version}" >> $GITHUB_ENV            
           echo "latest_version=${latest_version}"
 
