Fixed review comment

--- a/.github/configs/.licenserc.yaml
+++ b/.github/configs/.licenserc.yaml
@@ -4,11 +4,11 @@ header:
     copyright-owner: Dell Technologies
     content: 
         Copyright © 2023-2025 Dell Inc. or its subsidiaries. All Rights Reserved.
-        Dell Technologies, Dell, EMC, Dell EMC and other trademarks are trademarks of Dell Inc. or its subsidiaries.
+        Dell Technologies, Dell and other trademarks are trademarks of Dell Inc. or its subsidiaries.
         Other trademarks may be trademarks of their respective owners.
     pattern: 
         Copyright © 2023-2025 Dell Inc. or its subsidiaries. All Rights Reserved.
-        Dell Technologies, Dell, EMC, Dell EMC and other trademarks are trademarks of Dell Inc. or its subsidiaries.
+        Dell Technologies, Dell and other trademarks are trademarks of Dell Inc. or its subsidiaries.
         Other trademarks may be trademarks of their respective owners.
   paths-ignore:
     - 'dist'
