--- a/.github/workflows/ubi-version-update.yaml
+++ b/.github/workflows/ubi-version-update.yaml
@@ -78,12 +78,12 @@ jobs:
 
  # Needed for signing commits using Github App tokens
     # See: https://github.com/peter-evans/create-pull-request/blob/main/docs/concepts-guidelines.md#commit-signing
-    - uses: actions/create-github-app-token@v2.0.2
-      if: env.sha_mismatch == 'true'
-      id: generate-token
-      with:
-       # app-id: ${{ vars.CSM_RELEASE_APP_ID }}
-        private-key: ${{ secrets.CSM_RELEASE_APP_PRIVATE_KEY }}
+    # - uses: actions/create-github-app-token@v2.0.2
+    #   if: env.sha_mismatch == 'true'
+    #   id: generate-token
+    #   with:
+    #     app-id: ${{ vars.CSM_RELEASE_APP_ID }}
+    #     private-key: ${{ secrets.CSM_RELEASE_APP_PRIVATE_KEY }}
 
     - name: Create Pull Request
       if: env.sha_mismatch == 'true'
