--- a/.github/workflows/go-version-workflow.yaml
+++ b/.github/workflows/go-version-workflow.yaml
@@ -58,14 +58,34 @@ jobs:
           echo "Updating go version to ${{ env.major_version }}"
 
           find . -type f -name "${{ env.gomod }}" -execdir sh -c '[ -f "{}" ] && go mod edit -go ${{ env.major_version }} && go mod tidy' \;
+          if [ $? -ne 0 ]; then
+            echo "Failed to update go.mod"
+            exit 1
+          fi
 
           find . -type f -name "${{ env.gomod }}" -execdir sh -c '[ -f "{}" ] && grep -q "toolchain" go.mod && go mod edit -toolchain ${{ env.latest_version }} && go mod tidy' \;
+          if [ $? -ne 0 ]; then
+            echo "Failed to update toolchain"
+            exit 1
+          fi
 
           if [ -f config/csm-common.mk ]; then sed -i "s/^DEFAULT_GOVERSION.*/DEFAULT_GOVERSION=${{ env.major_version }}/g" config/csm-common.mk; fi
+          if [ $? -ne 0 ]; then
+            echo "Failed to update config/csm-common.mk"
+            exit 1
+          fi
 
           find . -type f ! -name "${{ env.exclude_file }}" -exec ${{ env.grep_cmd2 }} {} \; | while read -r file; do grep -v "hugo-version" "$file" | sed -i "s/go-version:.*/go-version: \"${{ env.major_version }}\"/" "$file"; done
+          if [ $? -ne 0 ]; then
+            echo "Failed to update github actions"
+            exit 1
+          fi
 
           find . -type f ! -name "${{ env.exclude_file }}" -exec ${{ env.grep_cmd3 }} {} \; | while read -r file; do sed -i "s/golang:.*/golang:${{ env.major_version }}/" "$file"; done
+          if [ $? -ne 0 ]; then
+            echo "Failed to update dockerfiles"
+            exit 1
+          fi
 
       # Needed for signing commits using Github App tokens
       # See: https://github.com/peter-evans/create-pull-request/blob/main/docs/concepts-guidelines.md#commit-signing
