--- a/.github/workflows/go-version-workflow.yaml
+++ b/.github/workflows/go-version-workflow.yaml
@@ -51,48 +51,37 @@ jobs:
       - name: Update go version
         env:
           gomod: go.mod
-          grep_cmd2: grep --exclude-dir=.git -l "go-version"
+          grep_cmd2: grep -I -l "go-version"
           grep_cmd3: grep -l "FROM golang"
           exclude_file: go-version-workflow.yaml
         run: |
           echo "Updating go version to ${{ env.major_version }}"
 
           find . -type f -name "${{ env.gomod }}" -execdir sh -c '[ -f "{}" ] && go mod edit -go ${{ env.major_version }} && go mod tidy' \;
-          if [ $? -ne 0 ]; then
-            echo "Failed to update go.mod"
-            exit 1
-          fi
+
           echo "here 1"
 
           find . -type f -name "${{ env.gomod }}" -execdir sh -c '[ -f "{}" ] && grep -q "toolchain" go.mod && go mod edit -toolchain ${{ env.latest_version }} && go mod tidy' \;
-          if [ $? -ne 0 ]; then
-            echo "Failed to update toolchain"
-            exit 1
-          fi
 
           echo "here 2"
 
-          if [ -f config/csm-common.mk ]; then sed -i "s/^DEFAULT_GOVERSION.*/DEFAULT_GOVERSION=${{ env.major_version }}/g" config/csm-common.mk; fi
-          if [ $? -ne 0 ]; then
-            echo "Failed to update config/csm-common.mk"
-            exit 1
+          if [ -f config/csm-common.mk ]; then
+            sed -i "s/^DEFAULT_GOVERSION.*/DEFAULT_GOVERSION=${{ env.major_version }}/g" config/csm-common.mk;
           fi
 
           echo "here 3"
 
-          find . -type f ! -name "${{ env.exclude_file }}" -exec ${{ env.grep_cmd2 }} {} \; | while read -r file; do grep -v "hugo-version" "$file" | sed -i "s/go-version:.*/go-version: \"${{ env.major_version }}\"/" "$file"; done
-          if [ $? -ne 0 ]; then
-            echo "Failed to update github actions"
-            exit 1
-          fi
+          find . -type f ! -name "${{ env.exclude_file }}" -exec ${{ env.grep_cmd2 }} {} + | while read -r file;
+          do
+            grep -v "hugo-version" "$file" | sed -i "s/go-version:.*/go-version: \"${{ env.major_version }}\"/" "$file";
+          done
 
           echo "here 4"
 
-          find . -type f ! -name "${{ env.exclude_file }}" -exec ${{ env.grep_cmd3 }} {} \; | while read -r file; do sed -i "s/golang:.*/golang:${{ env.major_version }}/" "$file"; done
-          if [ $? -ne 0 ]; then
-            echo "Failed to update dockerfiles"
-            exit 1
-          fi
+          find . -type f ! -name "${{ env.exclude_file }}" -exec ${{ env.grep_cmd3 }} {} \; | while read -r file;
+          do
+            sed -i "s/golang:.*/golang:${{ env.major_version }}/" "$file";
+          done
 
           echo "here 5"
 
