--- a/.github/workflows/check-license-header.yaml
+++ b/.github/workflows/check-license-header.yaml
@@ -17,34 +17,20 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
-      - name: Get config
-        run: |
-          curl -L -o .licenserc.yaml https://raw.githubusercontent.com/dell/common-github-actions/refs/heads/feature/license-validation/.github/configs/.licenserc.yaml
-
-      - name: Check License Header
-        uses: apache/skywalking-eyes/header@main
+      
+      - name: Set up Go
+        uses: actions/setup-go@v5
         with:
-          config: .licenserc.yaml
-          mode: check
-
-  fix-license-headers:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-
-      - name: Get config
-        run: |
-          curl -L -o .licenserc.yaml https://raw.githubusercontent.com/dell/common-github-actions/refs/heads/feature/license-validation/.github/configs/.licenserc.yaml
-
-      - name: Fix License Header
-        uses: apache/skywalking-eyes/header@main
-        with:
-          config: .licenserc.yaml
-          mode: fix
-      - name: Cleanup
-        run: |
-          rm -rf .licenserc.yaml
+          go-version: '1.24.2'
+  
+      - name: Install dependencies
+        run: go mod tidy
+  
+      - name: Build
+        run: go build -v .
+  
+      - name: Run
+        run: go run main.go
 
       - name: Commit changes
         uses: EndBug/add-and-commit@v9
