updated license checking logic

--- a/.github/workflows/check-license-header.yaml
+++ b/.github/workflows/check-license-header.yaml
@@ -20,8 +20,9 @@ jobs:
   
       - name: Run
         run: |
-          curl -L -o LICENSE-HEADER.txt https://raw.githubusercontent.com/dell/common-github-actions/refs/heads/feature/license-validation/.github/configs/.licenserc.yaml
-          curl -L -o license-checker https://raw.githubusercontent.com/dell/common-github-actions/refs/heads/feature/license-validation/.github/configs/.licenserc.yaml
+          curl -L -o LICENSE-HEADER.txt https://raw.githubusercontent.com/dell/common-github-actions/refs/heads/feature/license-header/license-checker/LICENSE-HEADER.txt
+          curl -L -o license-checker https://raw.githubusercontent.com/dell/common-github-actions/refs/heads/feature/license-header/license-checker/license-checker
+          ./license-checker
 
       - name: Commit changes
         uses: EndBug/add-and-commit@v9
