--- a/.github/workflows/check-license-header.yaml
+++ b/.github/workflows/check-license-header.yaml
@@ -19,10 +19,11 @@ jobs:
         uses: actions/checkout@v4
   
       - name: Run
+        shell: bash
         run: |
           curl -L -o LICENSE-HEADER.txt https://raw.githubusercontent.com/dell/common-github-actions/refs/heads/feature/license-header/license-checker/LICENSE-HEADER.txt
           curl -L -o license-checker https://raw.githubusercontent.com/dell/common-github-actions/refs/heads/feature/license-header/license-checker/license-checker
-          ./license-checker
+          bash ./license-checker
 
       - name: Commit changes
         uses: EndBug/add-and-commit@v9
